# dagou-pet

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  NOTICE.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  build.rs  electron-builder.yml  package-lock.json  package.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-windows.yml
assets/: ASSET_PROVENANCE.md
docs/: commercialization-and-update-plan.md  groove-mode.md  release-and-update-plan.md
native/src/: app.rs  audio.rs  cursor.rs  input.rs  main.rs  render.rs  settings.rs  ui.rs  update.rs  window.rs
native/windows/: installer.nsi
scripts/: build-native-release.ps1  smoke-native-release.ps1  smoke-packaged.cjs  write-checksums.cjs
src/main/: index.ts  keyboard-hook.ts  keyboard-lifecycle.ts  settings-store.ts  update-service.ts  windows-key-state.ts
src/preload/: index.ts
src/renderer/: app.ts  assets.d.ts  audio-engine.ts  dog-animation.ts  global.d.ts  groove-player.ts  index.html  (+7 more)
test/: audio-engine.test.ts  dog-animation.test.ts  groove-player.test.ts  key-classifier.test.ts  keyboard-hook.test.ts  keyboard-lifecycle.test.ts  pressed-key-tracker.test.ts  settings-store.test.ts  settings.test.ts  smoke-packaged.test.ts  sound-controller.test.ts  sound-profile.test.ts  sustain-processor.test.ts  update-service.test.ts  window-geometry.test.ts  windows-key-state.test.ts
(+6 files in other folders)
